--- a/style/photos.css
+++ b/style/photos.css
@@ -152,7 +152,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
     grid-auto-rows: minmax(280px, 310px);
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-auto-flow: dense !important;
     position: relative;
 }
@@ -165,6 +165,45 @@
     margin: 0;
     padding: 0;
     height: 100%;
+}
+
+.images .images_container .photo_wrapper .image {
+    position: relative;
+    cursor: pointer;
+}
+
+.images .images_container .photo_wrapper .image .author_container {
+    margin-left: 10px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    left: -10px;
+    right: 0;
+    bottom: -8px;
+    opacity: 0;
+    transition: all ease .25s;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: monospace;
+    width: auto;
+    padding: 40px 10px 4px 6px;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    /* background-color: seagreen; */
+
+}
+
+.images .images_container .photo_wrapper .image:hover .author_container {
+    opacity: 1;
+    background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
+    bottom: 0px;
+    height: 40px;
+    overflow:visible;
+    left: -10px;
+    right: 0;
+    flex-wrap: wrap-reverse;
+    cursor: pointer;
 }
 
 .images .images_container .photo_wrapper{
