--- a/style/vector.css
+++ b/style/vector.css
@@ -181,6 +181,45 @@
     position: relative;
 }
 
+.images .images_container .vector_wrapper .image {
+    position: relative;
+    cursor: pointer;
+}
+
+.images .images_container .vector_wrapper .image .author_container {
+    margin-left: 10px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    left: -10px;
+    right: 0;
+    bottom: -8px;
+    opacity: 0;
+    transition: all ease .25s;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: monospace;
+    width: auto;
+    padding: 40px 10px 4px 6px;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    /* background-color: seagreen; */
+
+}
+
+.images .images_container .vector_wrapper .image:hover .author_container {
+    opacity: 1;
+    background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
+    bottom: 0px;
+    height: 40px;
+    overflow:visible;
+    left: -10px;
+    right: 0;
+    flex-wrap: wrap-reverse;
+    cursor: pointer;
+}
+
 
 .images .images_container .vector_wrapper .image:nth-child(6){
     grid-column: span 2;
