--- a/style/vector.css
+++ b/style/vector.css
@@ -205,6 +205,7 @@
     padding: 40px 10px 4px 6px;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
     /* background-color: seagreen; */
+    pointer-events: none;
 
 }
 
