--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -97,22 +97,23 @@
     height: 100%;
     margin-top: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: minmax(320px, 350px);
-    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-auto-rows: minmax(320px, 350px); 
+    grid-gap: 20px; 
     grid-auto-flow: dense !important;
     position: relative;
     
 }
 
-.myprofile_images_wrapper img {
+.myprofile_images_wrapper div img {
     object-fit: cover;
     background-position: center;
     background-size:cover;
-    width: 550px;
+    width: 420px;
     margin: 0;
     padding: 0;
     height: 100%;
+    opacity: 1;
 }
 
 .author_container {
