--- a/style/settings.css
+++ b/style/settings.css
@@ -106,7 +106,7 @@ input#user_heading {
     align-items: center;
 }
 
-.settings_save button {
+.settings_save input {
     padding: 10px 100px;
     background-color: #1e90ff;
     color: white;
@@ -204,18 +204,6 @@ input#user_heading {
     left: 20px;
 }
 
-.signin_options button{
-    /* position: absolute; */
-    transform: translate3d(-90px, -95px,0);
-    padding: 4px 8px;
-    border-radius: 14px;
-    border: 1px solid #555;
-    background: #aaa;
-}
-
-.signin_options button a {
-    color: #222;
-}
 
 .more_settings {
     position: absolute;
@@ -224,11 +212,11 @@ input#user_heading {
 }
 
 #set-password {
-    transform: translate3d(-160px,-36px,0);
+    transform: translate3d(-100px,-22px,0);
 }
 
 #del-account {
-    transform: translate3d(-160px, -30px, 0);
+    transform: translate3d(60px, -40px, 0);
 }
 
 .user_profile_dropdown {
