--- a/style/index.css
+++ b/style/index.css
@@ -794,14 +794,14 @@ body{
     position: absolute;
     left: -10px;
     right: 0;
-    bottom: -8px;
+    bottom: -6px;
     opacity: 0;
-    transition: all ease .25s;
+    transition: all .25s ease;
     font-size: 14px;
     font-weight: 500;
     font-family: monospace;
     width: auto;
-    padding: 40px 10px 4px 6px;
+    padding: 40px 0px 0px 0px;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
     /* background-color: seagreen; */
 
@@ -824,7 +824,7 @@ body{
 
 
 
-#author{
+.author{
     padding-left: 10px;
 }
 
