--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -70,14 +70,21 @@
     font-family: sans-serif;
 }
 
+.myprofile_image  img{
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-color: white;
+    /* background-image: url(https://static.scientificamerican.com/sciam/cache/file/7A715AD8-449D-4B5A-ABA2C5D92D9B5A21_source.png); */
+    background-size: cover;
+    background-position: center;
+}
+
 .myprofile_image {
     height: 150px;
     width: 150px;
     border-radius: 50%;
     background-color: white;
-    background-image: url(https://static.scientificamerican.com/sciam/cache/file/7A715AD8-449D-4B5A-ABA2C5D92D9B5A21_source.png);
-    background-size: cover;
-    background-position: center;
 }
 
 
@@ -95,86 +102,87 @@
 
 .myprofile_images_wrapper {
     height: 100%;
-    margin-top: 20px;
+    margin: 20px 0px 0 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-auto-rows: minmax(320px, 350px); 
-    grid-gap: 20px; 
-    grid-auto-flow: dense !important;
-    position: relative;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    row-gap: 30px;
+    grid-auto-rows: 1fr;
+    grid-auto-columns: 1fr;
     
 }
 
-.myprofile_images_wrapper div img {
-    object-fit: cover;
-    background-position: center;
-    background-size:cover;
-    width: 420px;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    opacity: 1;
+.myprofile_images_wrapper img {
+    width: 400px;
+    height: 350px;
+    /* padding:10px; */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    /* background-color: blue; */
 }
 
-.author_container {
-    margin-left: 10px;
-    color: #fff;
+.myprofile_images_wrapper a .image {
+    /* position: relative; */
+    height: 350px;
+    width: 400px;
+}
+
+.myprofile_images_wrapper a {
+    text-decoration: none;
+    /* background-color: aqua; */
+    height: 350px;
+    width: 400px;
+    position: relative;
+}
+
+.myprofile_images_wrapper a .image .image-specs {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     position: absolute;
+    bottom: -15px;
+    right: 0;
     left: 0;
-    right: px;
-    bottom: -8px;
+    justify-content:space-between;
+    width: 100%;
+    padding: 40px 0px 0px 0px;
     opacity: 0;
     transition: all ease .25s;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: monospace;
-    width: auto;
-    padding: 40px 10px 4px 6px;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    pointer-events: none;
 }
 
-.my_image:hover .author_container {
+.myprofile_images_wrapper a:hover .image-specs {
     opacity: 1;
     background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
     bottom: 0px;
-    height: 40px;
+    height: 30px;
     overflow:visible;
-    left: -10px;
-    right: 2px;
     flex-wrap: wrap-reverse;
-}
-
-.my_image {
-    position: relative;
-    width: 100%;
     cursor: pointer;
-    border: 1px solid #ccc;
+    pointer-events: none;
+    left: 0px;
+} 
+
+.image-specs p {
+    color: white;
+    pointer-events: none;
+    font-family: sans-serif;
+    font-style: normal;
 }
 
-#author{
-    padding-left: 10px;
+.image-specs #name {
+    margin-left: 24px;
 }
 
-.votes div {
-    margin-left: 8px;
+.image-specs #tag {
+    margin-right: 14px;
 }
 
 
-.votes {
-    display: flex;
-    padding-right: 10px;
-}
 
-.votes a {
-    text-decoration: none;
-    color: #fff;
-}
 
-.votes a i:hover {
-    background: radial-gradient(#fff 50%, transparent 50%)
-}
+
 
 
