--- a/style/individual.css
+++ b/style/individual.css
@@ -1,47 +1,45 @@
-.individual-image-main {
-    /* background-color:teal; */
-    height: 1000px;
-}
 
-.individual-image-main .individual_container .individual_image_container {
-    background-color: #e6e6e6;
-    width: 960px;
+.individual_image_main {
+    width: 100%;
+    display: flex;
+    top: 30px;
     position: relative;
-    height: 700px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    left: 20px;
-    
-}
-
-.individual_image_container:hover {
-    background-color:#d6d6d6;
-    cursor: pointer;
-}
-
-.individual_image_container img {
-    position: absolute;
-    background-size: cover;
-    background-position: center;
-    min-height: 500px;
-    max-height:700px;
-    height: auto;
-    width: auto;
-    min-width: 400px;
-    max-width: 960px;
-    
 }
 
 .individual_container {
-    transform: translate3d(20px, 30px, 0);
-    
+    padding-left: 30px;
 }
+
+.individual_image_container {
+    width: 100%;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    /* padding-left: 30px; */
+    padding-top: 30px;
+}
+
+.image-elem {
+    position: relative;
+    width: 900px;    
+    /* background-color: blue !important; */
+}
+
+.image-elem img {
+   width: 100%;
+   height: auto;
+   object-fit: cover;
+   background-position: center;
+   background-size:cover;
+}
+
 
 .individual_profile {
     position: absolute;
-    top: 0px;
-    right: 52px;
+    top: 95px;
+    right: 62px;
 }
 
 .author_profile {
@@ -60,7 +58,9 @@
 }
 
 .image_button {
-    transform: translate3d(0, 45px,0);
+    transform: translate3d(0px, 45px,0);
+    /* padding-right: 20px; */
+    position: sticky;
 }
 
 .image_button button {
@@ -117,7 +117,9 @@
 .individual_last {
     display: flex;
     position: relative;
-    top: 50px;
+    /* top: 50px; */
+    top: 60px;
+    padding-bottom: 100px;
 }
 
 .individual_last button {
