--- a/style/individual.css
+++ b/style/individual.css
@@ -26,8 +26,55 @@
     width: 900px;    
     padding: 0;
     margin: 0;
-    /* box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.4); */
-    /* background-color: blue !important; */
+    transition: all 0.45s ease-in;
+    cursor: pointer;
+}
+
+.user-attributes {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px ;
+    background-image: linear-gradient(0deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
+    color: white;
+    height: 80px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.image-elem:hover  .user-attributes{
+    top: 0;
+    opacity: 1;
+    pointer-events: none;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.image-elem:hover::after  {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.user-attributes .user-name {
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.user-attributes .user-tags {
+    padding-right: 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .image-elem img {
@@ -42,19 +89,6 @@
    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.4);
 }
 
-.image-elem:hover::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    /* height: 50px; */
-    background-color: rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-    /* z-index: 10; */
-}
-
 
 
 
@@ -66,8 +100,12 @@
 
 .author_profile {
     display: flex;
+    justify-content: space-between;
+    /* background-color:blueviolet; */
     align-items: center;
     margin-right: 0;
+    position: relative;
+    right: 10px;
 }
 
 .profile_image {
@@ -82,16 +120,33 @@
 }
 
 .profile_name {
+    flex-grow: 1;
     font-style: normal;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 700;
     font-family: sans-serif;
+    color: #007890;
+}
+
+.profile-navigate {
+    /* margin-left: 20px; */
+}
+
+.profile-navigate a {
+    text-decoration: none;
+    color: #007890;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.profile-navigate a:hover {
+    text-decoration: underline;
 }
 
 .image_button {
     display: flex;
     position: relative;
-    top: 30px;
+    top: 20px;
     right: 10px;
     background-color: #eaeded;
     width: 320px;
@@ -147,7 +202,7 @@
 
 .individual_delete {
     position: relative;
-    top: 65px;
+    /* top: 65px; */
     border: transparent;
     background-color:#008ddf;
     color: #fff;
@@ -227,11 +282,12 @@
 
 .download-image {
     position: relative;
-    top: 26px;
-    left: 90px;
+    top: 30px;
     padding: 3px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    /* background-color:aquamarine; */
+    right: 10px;
 }
 
 .download-image button {
@@ -249,8 +305,9 @@
     width: 30%;
     text-align: center;
     position: relative;
-    top: 23px;
+    top: 27px;
     left: 195px;
+    border-radius: 7px;
     display: none;
     
 }
@@ -268,6 +325,91 @@
     padding: 8px 3px 8px 3px;
     cursor: pointer;
 }
+
+
+
+/*  Modal  */
+
+.modal-form {
+    position: relative;
+    top: 100px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-info p{
+    text-align: center;
+    padding-top: 20px;
+} 
+
+.modal-button {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+
+.yes {
+    margin-right: 20px;
+    padding: 2px 20px;
+    cursor: pointer;
+}
+
+.modal-button a button {
+    text-decoration: none;
+    color: #0078e7;
+}
+
+.no a {
+    text-decoration: none;
+    color: #0078e7;
+}
+
+.no {
+    margin-left:20px;
+    padding: 2px 20px;
+    cursor: pointer;
+}
+
+
+
 
 
 
