--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -191,6 +191,30 @@
     margin-right: 14px;
 }
 
+.upload-myimage {
+    margin: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    /* background-color: cadetblue; */
+    position: relative;
+    top: -120px;
+    left: 420px;
+}
+
+.upload-myimage button {
+    padding: 12px 24px 12px 24px;
+    background-color: #EAEDED;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+}
+
+.upload-myimage button a {
+    color: black;
+    font-size: 16px;
+    font-weight: 600;
+}
+
 
 
 
