--- a/style/settings.css
+++ b/style/settings.css
@@ -56,11 +56,11 @@ body {
 .profile_image_box {
     height: 180px;
     width: 180px;
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
     position: relative;
     left: 100px;
     bottom: 10px;
-    /* background-image: url(https://profiles.utdallas.edu/img/default.png); */
+    /* background-image: url(http://localhost:3002/uploads/profileImage-1621783266858.jpg); */
     background-size: cover;
     background-position: center;
 }
@@ -255,6 +255,87 @@ input#user_heading {
 
 .user_profile_dropdown {
     left: -170px;
+}
+
+
+/*  Modal  */
+
+.modal-form {
+    position: relative;
+    top: 100px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content {
+    position: relative;
+    top: 60px;
+    height: 150px;
+    border-radius: 8px;
+}
+
+.password-modal {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    /* margin: auto; */
+    /* background-color: #1e90ff; */
+    margin-left: 100px;
+    margin-top: 15px;
+}
+
+#new-password, #reenter-password {
+    font-size: 12px;
+    height: 20px;
+    width: 70%;
+    margin-left: 30px;
+    text-align: center;
+}
+
+#password-submit {
+    font-size: 14px;
+    width: 70%;
+    padding: 4px 20px 4px 20px;
+    margin-left: 30px;
+    cursor: pointer;
 }
 
 
