--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -32,7 +32,7 @@
 .myprofile_container {
     height: 320px;
     width: 100%;
-    /* background-color:burlywood; */
+    /* background-color:#839696; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,6 +41,7 @@
     /* background-image: url(https://wallpaperaccess.com/full/754632.jpg); */
     background-size: cover;
     background-position: center;
+
 }
 
 /* .myprofile_container img {
@@ -89,20 +90,22 @@
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    background-color: white;
+    background-color:#0a88d3;
+    border: 1px solid gray;
+    /* background-image: url(https://images.pexels.com/photos/1987301/pexels-photo-1987301.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500); */
 }
 
 
 .myprofile_images {
-    /* background-color: #ccc; */
+    background-color: #EAEDED;
 }
 
 .myprofile_images_container {
     padding-top: 20px;
     margin-right: 20px;
     margin-left: 20px;
-    height: 1000px;
-    
+    height: 100vh;
+    /* background-color: #EAEDED; */
 }
 
 .myprofile_images_wrapper {
