--- a/style/upload.css
+++ b/style/upload.css
@@ -2,6 +2,14 @@
     display: inline-block;
     margin-top: 30px;
     padding: 20px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #232323;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #05445E;
 }
 
 .upload_body .upload_container ul li:nth-child(1) {
@@ -19,38 +27,68 @@ form#upload-user-image {
     left: 40px;
 }
 
+input[type = submit], input[type = file] {
+    cursor: pointer
+}
+
+label {
+    color: #05445E;
+    font-size: 15px;
+    font-weight: 600;
+}
+
 
 
 #tags {
     position: absolute;
-    top: 60px;
+    top: 100px;
     left: 0px;
     height: 50px;
     width: 600px;
     font-size: 18px;
     padding: 8px 20px 8px 20px !important;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,0.4);
+    /* background-color: #EEEDE7; */
 }
 
-html, body {
-    
+body {
+    background-color: #D4F1F4;
+}
+
+hr {
+    border-color: 1px solid #05445E;
+}
+
+#name {
+    height: 20px;
+    width: 16%;
+    padding: 4px 12px;
+    font-size: 16px;
+    margin-bottom: 30px;
+    border: 1px solid rgba(0,0,0,0.4);
+    border-radius: 7px;
+    /* background-color: #EEEDE7; */
 }
 
 #image_upload {
     position: absolute;
-    top: 180px;
+    top: 200px;
     left: 0px;
 }
 
 #submit {
     position: absolute;
     left: 0px;
-    top: 240px;
+    top: 260px;
     border: none;
     padding: 8px 40px;
     border-radius: 14px;
     background-color: #1e90ff;
     color: #fff;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .main-header .nav-right li .upload_button {
