--- a/style/index.css
+++ b/style/index.css
@@ -821,7 +821,7 @@ body{
     font-family: monospace;
     width: auto;
     padding: 40px 0px 0px 0px;
-    /* height: 40px; */
+    height: 40px;
     /* transition-timing-function: cubic-bezier(0, 1, 0.5, 1); */
     /* background-color: seagreen; */
 
@@ -831,7 +831,7 @@ body{
     opacity: 1;
     background: linear-gradient(180deg,transparent, rgba(57, 57, 57, .05),rgba(57,57,57, .61), rgba(57,57,57, .61));
     bottom: 0px;
-    /* height: 40px; */
+    height: 40px;
     overflow:visible;
     left: -10px;
     right: 0;
