--- a/style/myprofile.css
+++ b/style/myprofile.css
@@ -109,23 +109,25 @@
 .myprofile_images {
     /* background-color: #EAEDED; */
     background-color:#e4efe7;
+    height: auto;
 }
 
 .myprofile_images_container {
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
-    height: 100vh;
+    
+    height: auto;
     /* background-color: #EAEDED; */
 }
 
 .myprofile_images_wrapper {
     position: relative;
-    height: 100%;
+    height: auto;
     margin: 30px 0px 0 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    /* grid-template-rows: repeat(3, 1fr); */
     row-gap: 30px;
     grid-auto-rows: 1fr;
     grid-auto-columns: 1fr;
@@ -235,6 +237,7 @@
 
 
 .myprofile-footer {
+    margin-top: 80px;
     background-color:slategrey;
     width: 120%;
     height: 140px;
